# snapsize

./: .gitignore  CMakeLists.txt  README.md  compile.sh
inc/: Extents.hh  HumanSize.hh  UniqueFileDescriptor.hh  UniqueMAllocPtr.hh
src/: Extents.cc  Extents_ioctl.cc  HumanSize.cc  UniqueFileDescriptor.cc  de.cc
